<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp"
    android:orientation="vertical"
    android:background="#e2e2e2"
    tools:context="org.d3ifcool.alert.AddProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="PRO"
            android:textSize="26sp"
            android:textStyle="italic"
            android:textColor="#1eb697"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="FILE"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="#464646"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_add_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_add_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nama"
                android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:paddingTop="16dp"
                android:paddingLeft="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_jk"
                android:textSize="18sp"
                android:layout_weight="1"/>
            <Spinner
                android:id="@+id/add_jk"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0">
            </Spinner>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_add_tempat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <EditText
                android:id="@+id/input_add_tempat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_tempat"
                android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_add_tgl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_add_tgl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_tgl_lahir"
                android:focusable="true"
                android:clickable="true"
                android:drawableRight="@drawable/ic_add_circle_outline_black_24dp"
                android:inputType="date"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_add_hohp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_add_nohp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_no_hp"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:paddingTop="16dp"
                android:paddingLeft="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_status"
                android:textSize="18sp"
                android:layout_weight="1"/>
            <Spinner
                android:id="@+id/add_status"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0">
            </Spinner>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:textAlignment="center"
                android:layout_marginRight="40dp"
                android:textStyle="bold"
                android:text="@string/notif_contact_ortu"/>
            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fab_add_contact_ortu"
                app:srcCompat="@drawable/ic_person_add_black_24dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"/>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
