...
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:id="@+id/profile_nama"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="16dp"
                                        android:gravity="center"
                                        android:textStyle="bold"
                                        android:text="@string/notif_profile"
...
                                    <ImageView
                                        android:layout_marginLeft="16dp"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        app:srcCompat="@drawable/ic_detail_date_black_24dp"/>
                                    <TextView
                                        android:id="@+id/profile_ttl"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:textSize="14sp" />
                                </LinearLayout>

...
                                    <ImageView
                                        android:layout_marginLeft="16dp"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        app:srcCompat="@drawable/ic_phone_black_24dp"/>
                                    <TextView
                                        android:id="@+id/profile_phone_number"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:textSize="16sp" />
                                </LinearLayout>

...
            <!--app:layout_anchor="@id/viewA"-->
            <!--app:layout_anchorGravity="bottom|center"-->
            <!--app:srcCompat="@drawable/ic_add_circle_outline_black_24dp" />-->
        <!---->

        <ImageView
            android:id="@+id/company_profil_editor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="16dp"
            android:onClick="edit_profile"
            app:srcCompat="@drawable/ic_edit_black_24dp" />
...
