<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/submit_profile"
        android:icon="@drawable/ic_check_24dp"
        app:showAsAction="always"/>
</menu>