<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_date_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_date_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:hint="@string/date"
            android:focusable="false"
            android:drawableRight="@drawable/ic_add_circle_outline_black_24dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_time_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_time_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time"
            android:focusable="true"
            android:clickable="true"
            android:drawableRight="@drawable/ic_add_circle_outline_black_24dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_name_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_schedule"
            android:inputType="textPersonName"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="4dp"
            android:background="@drawable/button_rounded_corner_negative"
            android:text="Cancel"
            android:textColor="@color/colorFontWhite"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:background="@drawable/button_rounded_corner_positive"
            android:text="@string/save"
            android:textColor="@color/colorFontWhite"/>
    </LinearLayout>
</LinearLayout>