<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="org.d3ifcool.alert.ScheduleFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/no_data_schedule"/>

    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:id="@+id/list_view_schedule"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </com.baoyz.swipemenulistview.SwipeMenuListView>
    
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/item_progres_bar"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_schedule_add_black_24dp" />

</RelativeLayout>
