...
    <string name="caption">Caption</string>
    <string name="btn_upload">Upload</string>
    <string name="picture_detail">Picture</string>
    <string name="detail_picture">Picture</string>
    <string name="my_qr_code">My QR Code</string>
    <string name="empty_data_ortu">Tidak Ada Data! \nSliahkan Tambah Anak!!!</string>
    <string name="title_add_schedule">Add Schedule</string>
    <string name="no_data_picture">No Data Picture!</string>
    <string name="notif_contact_ortu">Isikan Contact Orang Tua Anda!</string>
    <string name="nama_orang_tua">Nama Orang Tua</string>
    <string name="notifikasi_nohp">No HP tidak tersedia! Silahkan isi data terlebih dahulu.</string>
    <string name="confirm_contact_ortu">Silahkan isi data Contact Orang Tua anda!</string>

...
